Fix homepage root and audio dependency

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^5.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
