Add push notification triggers and OneSignal setup

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Example environment variables for LOCENTRA
-# Provide your OneSignal application ID for push notifications
+# Provide your OneSignal application ID for the front end
 VITE_ONESIGNAL_APP_ID=
-# Server function environment variable for OneSignal
+
+# Serverless function environment variables for OneSignal
+ONESIGNAL_APP_ID=
 ONESIGNAL_REST_API_KEY=
